--- a/css/main.css
+++ b/css/main.css
@@ -566,3 +566,12 @@ body {
   text-overflow: ellipsis;
   white-space: normal;
 }
+
+.line-clamp-2 {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: normal;
+}
