--- a/css/main.css
+++ b/css/main.css
@@ -542,26 +542,23 @@ body {
   }
 }
 
-/* 鼠标悬浮状态变为指针 */
 .project-card-title {
   cursor: pointer;
 }
 
-/* 标题超过两行时显示省略号 */
 .project-card-title {
   overflow: hidden;
   display: -webkit-box;
-  -webkit-line-clamp: 2; /* 限制为两行 */
+  -webkit-line-clamp: 2; 
   -webkit-box-orient: vertical;
   text-overflow: ellipsis;
   white-space: normal;
 }
 
-/* 描述超过三行时显示省略号 */
 .project-card-description {
   overflow: hidden;
   display: -webkit-box;
-  -webkit-line-clamp: 3; /* 限制为三行 */
+  -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
   text-overflow: ellipsis;
   white-space: normal;
