[Fix] Fix Contact BTN Mobile Layout

--- a/css/main.css
+++ b/css/main.css
@@ -406,14 +406,18 @@ body {
   background-color: #efefef;
   text-decoration: none;
   text-align: center;
-  display: block;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   margin: 1.5rem auto;
+  padding: 2px;
   width: 220px;
-  font-size: 1.375rem;
+  min-height: 55px;
+  font-size: 1rem;
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 300;
   color: #333;
-  line-height: 55px;
   -webkit-transition: all 0.2s ease;
   -moz-transition: all 0.2s ease;
   transition: all 0.2s ease;
@@ -549,7 +553,7 @@ body {
 .project-card-title {
   overflow: hidden;
   display: -webkit-box;
-  -webkit-line-clamp: 2; 
+  -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   text-overflow: ellipsis;
   white-space: normal;
@@ -571,4 +575,12 @@ body {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: normal;
+}
+
+@media (min-width: 600px) {
+  .contact-button {
+    flex-direction: row;
+    gap: 0.3rem;
+    font-size: 1.3rem;
+  }
 }
