--- a/css/main.css
+++ b/css/main.css
@@ -432,13 +432,17 @@ body {
 .content-section {
   margin: 0 0 2rem;
 }
-
 .project-item {
   width: 100%;
   margin-bottom: .6rem;
   display: flex;
   flex-direction: column;
+  align-items: start;
   gap: .2rem;
+  transition: all 0.2s ease;
+}
+.project-item:hover {
+  opacity: 0.8;
 }
 .project-item .project-item-title {
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -609,7 +613,8 @@ body {
 @media (min-width: 600px) {
   .project-item {
     flex-direction: row;
-    gap: 0.6rem;
-    margin-bottom: .6rem;
+    gap: 1rem;
+    margin-bottom: 1rem;
+    align-items: center;
   }
 }
