--- a/css/main.css
+++ b/css/main.css
@@ -375,12 +375,14 @@ body {
   text-align: center;
   border-top: 2px solid #c7c7c7;
   padding-top: 0.4rem;
+  padding-bottom: 0.2rem;
 }
 @media (min-width: 600px) {
   .icon-links {
     float: right;
     border-top: none;
     padding-top: 0;
+    padding-bottom: 0;
   }
 }
 .icon-links .icon-link-item {
@@ -448,7 +450,7 @@ body {
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 700;
   margin: 0;
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   letter-spacing: -0.05rem;
   line-height: 1;
 }
